Added a Join Discord Button

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
         <br>
         <iframe src="https://discord.com/widget?id=1220023443391643830&theme=dark" width="350" height="500"
             allowtransparency="true" frameborder="0"></iframe>
+            <br>
+        <a href="https://discord.gg/ARDHyKxtpH"
+                style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; text-align: center;">
+                Trete dem Discord Server bei
+            </a>
         <br>
         <br>
     </section>
