--- a/team.html
+++ b/team.html
@@ -25,6 +25,7 @@
                 </li>
                 <li><a href="/server.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Server
                         Info</a></li>
+                <li><a href="/news.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Neuigkeiten</a></li>
             </ul>
         </nav>
         <div>
