--- a/server.html
+++ b/server.html
@@ -42,6 +42,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
                 </li>
                 <li><a href="/server.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Server
                         Info</a></li>
+                <li><a href="/news.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Neuigkeiten</a></li>
             </ul>
         </nav>
         <div>
