--- a/index.html
+++ b/index.html
@@ -101,7 +101,17 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
             </tr>
         </table>
     </section>
-
+    <section id="home">
+        <h2>Neuigkeiten</h2>
+        <br>
+        <iframe src="https://www.blockattack.fun/news.html" width="350" height="500"></iframe>
+        <br>
+                <a href="/news.html"
+                style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; text-align: center;">
+                Mehr anzeigen...
+            </a>
+        <br>
+    </section>
     <section id="home">
         <br>
         <iframe src="https://discord.com/widget?id=1220023443391643830&theme=dark" width="350" height="500"
@@ -114,6 +124,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
         <br>
         <br>
     </section>
+
     <section id="about-owner">
         <h2>Über den Owner: Dr. Mifo</h2>
         <div class="owner-info">
