--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
             </tr>
         </table>
     </section>
-    <section id="home">
+    <section>
         <h2>Neuigkeiten</h2>
         <br>
         <iframe src="https://www.blockattack.fun/news.html" width="350" height="500"></iframe>
