--- a/index.html
+++ b/index.html
@@ -101,29 +101,27 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
             </tr>
         </table>
     </section>
-    <section>
-        <h2>Neuigkeiten</h2>
-        <br>
-        <iframe src="https://www.blockattack.fun/news.html" width="350" height="500"></iframe>
-        <br>
-                <a href="/news.html"
-                style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; text-align: center;">
-                Mehr anzeigen...
-            </a>
-        <br>
-    </section>
-    <section id="home">
-        <br>
-        <iframe src="https://discord.com/widget?id=1220023443391643830&theme=dark" width="350" height="500"
-            allowtransparency="true" frameborder="0"></iframe>
-            <br>
-        <a href="https://discord.gg/ARDHyKxtpH"
-                style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; text-align: center;">
-                Trete dem Discord Server bei
-            </a>
-        <br>
-        <br>
-    </section>
+<section id="news-section" style="margin-bottom: 50px; border-bottom: 2px solid #ccc; padding-bottom: 20px;">
+    <h2>Neuigkeiten</h2>
+    <iframe src="https://www.blockattack.fun/news.html" width="350" height="500"></iframe>
+    <br>
+    <a href="/news.html"
+        style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; text-align: center;">
+        Mehr anzeigen...
+    </a>
+</section>
+
+<section id="discord-section" style="margin-top: 50px;">
+    <h2>Discord-Server</h2>
+    <iframe src="https://discord.com/widget?id=1220023443391643830&theme=dark" width="350" height="500"
+        allowtransparency="true" frameborder="0"></iframe>
+    <br>
+    <a href="https://discord.gg/ARDHyKxtpH"
+        style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; text-align: center;">
+        Trete dem Discord Server bei
+    </a>
+</section>
+
 
     <section id="about-owner">
         <h2>Über den Owner: Dr. Mifo</h2>
