--- a/index.html
+++ b/index.html
@@ -62,34 +62,47 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
         <p><em>Jetzt die neuesten Features wie das Claimen von Gebieten ausprobieren!</em></p>
     </section>
     <script>
-   async function loadNews() {
+  async function loadNews() {
     try {
+        // Abrufen der Nachrichten von der API
         const response = await fetch('https://api.errexe.xyz/blockattack-api/news/get');
         const data = await response.json();
 
+        // Den Container für Nachrichten holen
         const newsContainer = document.getElementById('news-container');
-        newsContainer.innerHTML = '';
-        const latestNews = data.slice(0, 2);
+        newsContainer.innerHTML = '';  // Alte Nachrichten entfernen
+
+        // Überprüfen, ob Nachrichten vorhanden sind
+        const latestNews = data.slice(0, 2);  // Nur die ersten 2 Nachrichten anzeigen
 
         if (latestNews.length === 0) {
-            newsContainer.innerHTML = 'Keine Neuigkeiten verfügbar.';
+            newsContainer.innerHTML = 'Keine Neuigkeiten verfügbar.';  // Wenn keine Nachrichten verfügbar sind
         } else {
+            // Nachrichten in HTML umwandeln und anzeigen
             latestNews.forEach(newsItem => {
+                // Erstellen eines kleinen Divs für jede Nachricht
                 const newsElement = document.createElement('div');
                 newsElement.classList.add('news-item');
+                newsElement.style.marginBottom = '10px';  // Ein wenig Abstand zwischen den Nachrichten
+
+                // Hinzufügen von Titel (h3) und Inhalt (p)
                 newsElement.innerHTML = `
-                    <h3>${newsItem.title}</h3>
-                    <p>${newsItem.content}</p>
+                    <h3 style="font-size: 1.2rem; color: #333;">${newsItem.title}</h3>
+                    <p style="font-size: 1rem; color: #666;">${newsItem.content}</p>
                 `;
+
+                // Nachricht zum Container hinzufügen
                 newsContainer.appendChild(newsElement);
             });
         }
     } catch (error) {
+        // Fehler beim Laden der Nachrichten
         console.error('Fehler beim Laden der Neuigkeiten:', error);
         document.getElementById('news-container').innerHTML = 'Fehler beim Laden der Neuigkeiten.';
     }
 }
 
+// Nachrichten beim Laden der Seite anzeigen
 loadNews();
 
     </script>
