--- a/index.html
+++ b/index.html
@@ -61,48 +61,73 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
         <p>Verbinde dich jetzt: <strong>blockattack.fun</strong></p>
         <p><em>Jetzt die neuesten Features wie das Claimen von Gebieten ausprobieren!</em></p>
     </section>
+    <style>
+#news-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.news-item {
+    background-color: #f9f9f9; 
+    border: 1px solid #ddd;
+    border-radius: 8px; 
+    padding: 20px; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    transition: transform 0.3s, box-shadow 0.3s; 
+}
+
+.news-item:hover {
+    transform: translateY(-5px); 
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2); 
+}
+
+.news-item h3 {
+    font-size: 1.4rem;
+    color: #333;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.news-item p {
+    font-size: 1rem;
+    color: #555;
+    line-height: 1.5;
+}
+
+    </style>
     <script>
-  async function loadNews() {
+async function loadNews() {
     try {
-        // Abrufen der Nachrichten von der API
         const response = await fetch('https://api.errexe.xyz/blockattack-api/news/get');
         const data = await response.json();
 
-        // Den Container für Nachrichten holen
         const newsContainer = document.getElementById('news-container');
-        newsContainer.innerHTML = '';  // Alte Nachrichten entfernen
+        newsContainer.innerHTML = '';
 
-        // Überprüfen, ob Nachrichten vorhanden sind
-        const latestNews = data.slice(0, 2);  // Nur die ersten 2 Nachrichten anzeigen
+        const latestNews = data.slice(0, 2);
 
         if (latestNews.length === 0) {
-            newsContainer.innerHTML = 'Keine Neuigkeiten verfügbar.';  // Wenn keine Nachrichten verfügbar sind
+            newsContainer.innerHTML = 'Keine Neuigkeiten verfügbar.';
         } else {
-            // Nachrichten in HTML umwandeln und anzeigen
             latestNews.forEach(newsItem => {
-                // Erstellen eines kleinen Divs für jede Nachricht
                 const newsElement = document.createElement('div');
                 newsElement.classList.add('news-item');
-                newsElement.style.marginBottom = '10px';  // Ein wenig Abstand zwischen den Nachrichten
 
-                // Hinzufügen von Titel (h3) und Inhalt (p)
                 newsElement.innerHTML = `
-                    <h3 style="font-size: 1.2rem; color: #333;">${newsItem.title}</h3>
-                    <p style="font-size: 1rem; color: #666;">${newsItem.content}</p>
+                    <h3>${newsItem.title}</h3>
+                    <p>${newsItem.content}</p>
                 `;
 
-                // Nachricht zum Container hinzufügen
                 newsContainer.appendChild(newsElement);
             });
         }
     } catch (error) {
-        // Fehler beim Laden der Nachrichten
         console.error('Fehler beim Laden der Neuigkeiten:', error);
         document.getElementById('news-container').innerHTML = 'Fehler beim Laden der Neuigkeiten.';
     }
 }
 
-// Nachrichten beim Laden der Seite anzeigen
 loadNews();
 
     </script>
