--- a/news.html
+++ b/news.html
@@ -6,47 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nachrichten - Blockattack</title>
     <link rel="stylesheet" href="/static/css/style.css">
-    <script>
-        async function loadNews() {
-            try {
-                const response = await fetch('https://api.errexe.xyz/blockattack-api/news/get');
-                const news = await response.json();
+<script>
+async function loadNews() {
+    try {
+        const response = await fetch('https://api.errexe.xyz/blockattack-api/news/get');
+        const data = await response.json();
 
-                const newsContainer = document.getElementById('news-container');
-                newsContainer.innerHTML = '';
+        const newsContainer = document.getElementById('news-container');
+        newsContainer.innerHTML = '';
 
-                // Reihenfolge umkehren
-                news.reverse();
+        // Select the last two news items
+        const latestNews = data.slice(-2);
 
-                news.forEach(item => {
-                    const newsItem = document.createElement('div');
-                    newsItem.style.border = '1px solid #ddd';
-                    newsItem.style.padding = '10px';
-                    newsItem.style.margin = '10px 0';
+        if (latestNews.length === 0) {
+            newsContainer.innerHTML = 'Keine Neuigkeiten verfügbar.';
+        } else {
+            latestNews.forEach(newsItem => {
+                const newsElement = document.createElement('div');
+                newsElement.classList.add('news-item');
 
-                    const title = document.createElement('h3');
-                    title.textContent = item.title;
+                newsElement.innerHTML = `
+                    <h3>${newsItem.title}</h3>
+                    <p>${newsItem.content}</p>
+                    <p class="news-author">Von: <span>${newsItem.author}</span></p>
+                `;
 
-                    const author = document.createElement('p');
-                    author.textContent = `Author: ${item.author}`;
-                    author.style.fontStyle = 'italic';
-
-                    const content = document.createElement('p');
-                    content.textContent = item.content;
-
-                    newsItem.appendChild(title);
-                    newsItem.appendChild(author);
-                    newsItem.appendChild(content);
-
-                    newsContainer.appendChild(newsItem);
-                });
-            } catch (error) {
-                console.error('Fehler beim Laden der Daten:', error);
-            }
+                newsContainer.appendChild(newsElement);
+            });
         }
+    } catch (error) {
+        console.error('Fehler beim Laden der Neuigkeiten:', error);
+        document.getElementById('news-container').innerHTML = 'Fehler beim Laden der Neuigkeiten.';
+    }
+}
 
-        document.addEventListener('DOMContentLoaded', loadNews);
-    </script>
+loadNews();
+</script>
+
 </head>
 
 <body>
