--- a/team.html
+++ b/team.html
@@ -64,12 +64,13 @@
                 <p>Supporter</p>
                 <p>Ein Supporter.</p>
             </div>
+            <!-- entfernt auf anfrage von very
             <div class="team-member">
                 <img src="/whitecrafter.jpg" alt="Whitecrafter44">
                 <h3>Whitecraft44</h3>
                 <p>Supporter</p>
                 <p>Ein Supporter.</p>
-            </div>
+            </div> -->
         </div>
         <br><br><br><br><br><br>
 
