Added Website Credits to server.html

--- a/server.html
+++ b/server.html
@@ -74,6 +74,14 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
             <li>Events und regelmäßige Updates</li>
         </ul>
     </section>
+    <section>
+        <script>
+    function credits() {
+        window.location.href = "/static/credits.txt";
+    }
+        </script>
+        <button style="background-color: #007bff; color: #fff; border: none; padding: 8px 16px; border-radius: 5px; cursor: pointer; font-size: 1rem;" onclick="credits()">Website Credits</a>
+    </section>
     <section id="server-status">
         <h2>Server Status</h2>
         <div id="status-message">Lade Serverstatus...</div>
