--- a/team.html
+++ b/team.html
@@ -55,23 +55,37 @@
                 <p>Owner</p>
                 <p>Owner des Blockattack Minecraft Servers.</p>
             </div>
+            <!--
             <div class="team-member">
                 <img src="/very.jpg" alt="VeryUmbrella">
                 <h3>VeryUmbrella</h3>
                 <p>Leitung</p>
                 <p>Aktuelle Leitung des Servers (alte Leitung war gmrrh).</p>
             </div>
+            -->
+                        <div class="team-member">
+                <img src="/dadiwo.webp" alt="DaDiWo">
+                <h3>DaDiWo</h3>
+                <p>Supporter</p>
+                <p>Ein Supporter.</p>
+            </div>
+                        <div class="team-member">
+                <img src="/k.webp" alt="BadPie">
+                <h3>Badpie</h3>
+                <p>Supporter</p>
+                <p>Ein Supporter.</p>
+            </div>
             <div class="team-member">
                 <img src="/danino.jpg" alt="Danino">
                 <h3>Danino</h3>
-                <p>Moderator</p>
-                <p>Ein Moderator.</p>
+                <p>leitung</p>
+                <p>Teil der Leitung.</p>
             </div>
             <div class="team-member">
                 <img src="/kraftwerk.jpg" alt="Kraftwerk">
                 <h3>AtomKraftwerk42</h3>
-                <p>Supporter</p>
-                <p>Ein Supporter.</p>
+                <p>Leitung</p>
+                <p>Teil der Leitung.</p>
             </div>
             <!-- entfernt auf anfrage von very
             <div class="team-member">
