--- a/team.html
+++ b/team.html
@@ -78,7 +78,7 @@
             <div class="team-member">
                 <img src="/danino.jpg" alt="Danino">
                 <h3>Danino</h3>
-                <p>leitung</p>
+                <p>Leitung</p>
                 <p>Teil der Leitung.</p>
             </div>
             <div class="team-member">
