mehr credits auf der website zu gmrrh und andere kleine änderungen

--- a/404.html
+++ b/404.html
@@ -71,7 +71,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
     </section>
 
     <footer>
-        <p>&copy; 2025 Blockattack Server. Alle Rechte vorbehalten. Powered by mine-server.org. Website by TheErrorExe
+        <p>&copy; 2025 Blockattack Server. Alle Rechte vorbehalten. Powered by mine-server.org. Website by TheErrorExe und GomorrhaDev
         </p>
         <br>
         <a href="/privacy.html" style="display: inline;">Privacy</a>
