--- a/news.html
+++ b/news.html
@@ -99,6 +99,11 @@ loadNews();
         <p>&copy; BlockAttack 2025</p>
         <p>Gehostet auf <a href="https://mine-server.org" target="_blank" style="color: inherit; text-decoration: inherit;">mine-server.org</a></p>
         <p>Website von <a href="https://errexe.xyz" target="_blank" style="color: inherit; text-decoration: inherit;">TheErrorExe</a></p>
+        <p style=" display: inline;"> und <a href="https://github.com/GomorrhaDev" target="_blank"
+            style="color: inherit; text-decoration: inherit;  display: inline;">GomorrhaDev</a></p>
+            <br>
+            <a href="/privacy.html" style="display: inline;">Privacy</a>
+            <p style="display: inline;"> | </p><a href="/terms.html" style="display: inline;">Terms of Service</a>
     </footer>
 </body>
 
