--- a/server.html
+++ b/server.html
@@ -140,6 +140,8 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
                 style="color: inherit; text-decoration: inherit;">mine-server.org</a></p>
         <p>Website von <a href="https://errexe.xyz" target="_blank"
                 style="color: inherit; text-decoration: inherit;">TheErrorExe</a></p>
+                <p style=" display: inline;"> und <a href="https://github.com/GomorrhaDev" target="_blank"
+                    style="color: inherit; text-decoration: inherit;  display: inline;">GomorrhaDev</a></p>
         <br>
         <a href="/privacy.html" style="display: inline;">Privacy</a>
         <p style="display: inline;"> | </p><a href="/terms.html" style="display: inline;">Terms of Service</a>
