--- a/team.html
+++ b/team.html
@@ -105,6 +105,8 @@
                 style="color: inherit; text-decoration: inherit;">mine-server.org</a></p>
         <p>Website von <a href="https://errexe.xyz" target="_blank"
                 style="color: inherit; text-decoration: inherit;">TheErrorExe</a></p>
+                <p style=" display: inline;"> und <a href="https://github.com/GomorrhaDev" target="_blank"
+                    style="color: inherit; text-decoration: inherit;  display: inline;">GomorrhaDev</a></p>
         <br>
         <a href="/privacy.html" style="display: inline;">Privacy</a>
         <p style="display: inline;"> | </p><a href="/terms.html" style="display: inline;">Terms of Service</a>
