--- a/team.html
+++ b/team.html
@@ -55,22 +55,14 @@
                 <p>Owner</p>
                 <p>Owner des Blockattack Minecraft Servers.</p>
             </div>
-            <!--
             <div class="team-member">
-                <img src="/very.jpg" alt="VeryUmbrella">
-                <h3>VeryUmbrella</h3>
-                <p>Leitung</p>
-                <p>Aktuelle Leitung des Servers (alte Leitung war gmrrh).</p>
-            </div>
-            -->
-                        <div class="team-member">
                 <img src="/dadiwo.webp" alt="DaDiWo">
                 <h3>DaDiWo</h3>
                 <p>Supporter</p>
                 <p>Ein Supporter.</p>
             </div>
-                        <div class="team-member">
-                <img src="/k.webp" alt="BadPie">
+            <div class="team-member">
+                <img src="/badpie.webp" alt="BadPie">
                 <h3>Badpie</h3>
                 <p>Supporter</p>
                 <p>Ein Supporter.</p>
@@ -87,13 +79,6 @@
                 <p>Leitung</p>
                 <p>Teil der Leitung.</p>
             </div>
-            <!-- entfernt auf anfrage von very
-            <div class="team-member">
-                <img src="/whitecrafter.jpg" alt="Whitecrafter44">
-                <h3>Whitecraft44</h3>
-                <p>Supporter</p>
-                <p>Ein Supporter.</p>
-            </div> -->
         </div>
         <br><br><br><br><br><br>
 
