--- a/join/index.html
+++ b/join/index.html
@@ -48,7 +48,7 @@
         <ol>
             <li>Öffne Minecraft und gehe zu "Spielen".</li>
             <li>Klicke auf "Freunde" und dann auf "Freund hinzufügen".</li>
-            <li>Gib den Spielernamen <strong>Blockattack.fun</strong> ein und klich auf Hinzufügen.</li>
+            <li>Gib den Spielernamen <strong>Blockattackfun</strong> ein und klich auf Hinzufügen.</li>
             <li>Warte bis zu 20 Sekunden, gehe zu "Spielen" und geh auf Blockattack. Falls ein Fehler mit "Floodgate" kommt oder "Geyser" versuche es erneut bis es klappt.</li>
         </ol>
         <!-- ich plane noch bilder einzubauen , ich mach es später <img src="/images/guide2.jpg" alt="Bedrock Edition Guide" style="width: 100%; max-width: 600px; margin: 20px 0;"> -->
